Cambio de direccionamiento

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="sp">
 <head>
-    <meta property="og:image" content="https://comfenalcocursos2021.github.io/Ejercicio_Maquetacion_PHP_28_02_2022/img/meta.jpg">
+    <meta property="og:image" content="https://wendymarconi.github.io/Ejercicio_Maquetacion_PHP_28_02_2022/">
     <meta name="description" content="“por definir”">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
